# zk-bridge

./: .gitignore  Anchor.toml  Cargo.toml  README.md  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.yml  package-lock.json  package.json  prometheus.yml  tsconfig.json
docker/: Dockerfile  Dockerfile.anchor  Dockerfile.builder  Dockerfile.circuits  Dockerfile.dev  Dockerfile.relayer  Dockerfile.submission-manager  build.sh  circuits-server.js
docs/: README.md  setup.md
